kgtkr/kgtkrnet/kgtkrnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgtkrnet
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: kgtkrnet
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kgtkrnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kgtkrnet
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kgtkrnet
    spec:
      containers:
        - image: ghcr.io/kgtkr/kgtkr.net:20260913095725656-8d3e086
          name: kgtkrnet
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
      restartPolicy: Always
