kgtkr/kgtkrnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kgtkr.net
      secretName: ingress-cert
  rules:
    - host: kgtkr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kgtkrnet
                port:
                  number: 3000
